--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -14,5 +14,8 @@
 
     "Become a Creator with Us": "Become a Creator with Us",
     "Turn your art into wearable merch. We partner with Armenian artists and creators, bringing their designs to life on premium apparel and helping them sell globally.": "Turn your art into wearable merch. We partner with Armenian artists and creators, bringing their designs to life on premium apparel and helping them sell globally.",
-    "Apply as an Artist": "Apply As An Artist"
+    "Apply as an Artist": "Apply As An Artist",
+
+
+    "Latest Products": "Latest Products"
 }
