--- a/resources/lang/hy.json
+++ b/resources/lang/hy.json
@@ -13,5 +13,7 @@
 
     "Become a Creator with Us": "Դարձեք ստեղծագործ մեր հետ",
     "Turn your art into wearable merch. We partner with Armenian artists and creators, bringing their designs to life on premium apparel and helping them sell globally.": "Ձեր արվեստը վերափոխեք կրելի մերչի։ Մենք համագործակցում ենք հայկական արվեստագետների և ստեղծագործողների հետ՝ նրանց դիզայնները կյանքի կոչելով պրեմիում հագուստում և օգնելով նրանց վաճառվել ամբողջ աշխարհում։",
-    "Apply as an Artist": "Դիմել որպես արտիստ"
+    "Apply as an Artist": "Դիմել որպես արտիստ",
+
+    "Latest Products": "Վերջին ապրանքները"
 }
