admin filters and status

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -17,5 +17,7 @@
     "Apply as an Artist": "Apply As An Artist",
 
 
-    "Latest Products": "Latest Products"
+    "Latest Products": "Latest Products",
+
+
 }
